modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_var.gd
func test():
	print(v1)

var v1 := v2
var v2 := v1
